--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@ Packwiz/packwiz
 Packwiz/*/resourcepacks/Fast Better Grass.zip
 Packwiz/*/resourcepacks/Chat Reporting Helper.zip
 Packwiz/*/resourcepacks/SodiumTranslations.zip
+.vscode/*
+.qodo/*
