--- a/.github/workflows/auto-publish.yml
+++ b/.github/workflows/auto-publish.yml
@@ -52,13 +52,13 @@ jobs:
          run: |
            chmod +x ./packwiz
            pushd Packwiz/${{ vars.MC_VERSION }}
-           ../../packwiz modrinth export -o ../../Fabulously.Optimized-${{ github.ref_name }}.mrpack
+           ../../packwiz modrinth export -o ../../VanillaBeanPack-${{ github.ref_name }}.mrpack
            popd
        - name: Attest mrpack
          id: attest-mrpack
          uses: actions/attest-build-provenance@v2
          with:
-          subject-path: Fabulously.Optimized-${{ github.ref_name }}.mrpack
+          subject-path: VanillaBeanPack-${{ github.ref_name }}.mrpack
        - name: Copy and zip attestation
          run: |
            cp ${{ steps.attest-mrpack.outputs.bundle-path }} cosign-bundle.json
@@ -67,17 +67,17 @@ jobs:
          uses: Kir-Antipov/mc-publish@v3.3
          with:
            name: ${{ github.ref_name }} for ${{ vars.MC_VERSION }}
-           modrinth-id: 1KVo5zza
+           modrinth-id: 9jIRcx30
            modrinth-token: ${{ secrets.MODRINTH_TOKEN }}
            modrinth-unfeature-mode: subset
            files: |
-             Fabulously.Optimized-${{ github.ref_name }}.mrpack
+             VanillaBeanPack-${{ github.ref_name }}.mrpack
              cosign-bundle.zip
            loaders: fabric
            game-versions: ${{ vars.MC_VERSION }}
        - name: Upload to Github
          uses: Shopify/upload-to-release@v2.0.0
          with:
-           name: Fabulously.Optimized-${{ github.ref_name }}.mrpack
-           path: Fabulously.Optimized-${{ github.ref_name }}.mrpack
+           name: VanillaBeanPack-${{ github.ref_name }}.mrpack
+           path: VanillaBeanPack-${{ github.ref_name }}.mrpack
            repo-token: ${{ secrets.GITHUB_TOKEN }}
